# lexgui.js

./: .git-blame-ignore-revs  .gitignore  README.md  build-legacy.py  changelog.md  changelog_rc8.md  demo.js  demo_godot_ui.js  demo_pocketdialog.js  documentation.md  dprint.json  generate-colors.js  index.html  index_old.html  lexgui.js  old_demo.js  package-lock.json  package.json  rollup.build.config.js  rollup.config.js  rollup.js.build.config.js  rollup.ts.build.config.js  tailwind.config.js  test-new-editor.ts  test_widgets_demo.js  tsconfig.all.json  tsconfig.base.json  tsconfig.core.json  tsconfig.ext.json  tsconfig.json
colors/: index.html
css/: colors.css  docs.css  lexgui.css  lexgui.min.css  lexguidocs.css  output.css
data/: CMakeLists.txt  animation.bml  c_sample.c  cpp_header_sample.hpp  css_sample.css  engine.cpp  example_mail_data.json  frag.wgsl  function_sample.json  graph_sample.json  js_sample.js  json_sample.json  php_sample.php  python_sample.py  rust_sample.rs  script.js  style.css  test.json  ts_sample.ts  xml_sample.xml
demo/: code.js  index.html
docs/: adding_first_widget.html  area.html  asset-view.html  branch.html  branching.html  changelog.html  code-editor.html  code_editor.html  components.html  context-menu.html  context_menu.html  creating-area.html  creating-areas.html  creating_an_area.html  dialog.html  dialogs.html  docmaker.js  documentation.html  event-handling.html  event_handling.html  first-components.html  first-widget.html  first-widgets.html  getting-started.html  getting_started.html  graph-editor.html  graph_editor.html  icons.html  index.html  installation.html  instancing-panels.html  instancing_panels.html  node_graph.html  notifications.html  panel.html  skeleton.html  style.css  themes.html  timeline.html  tour.html  (+3 more)
docs/api/: area.html  areaoverlaybuttons.html  basecomponent.html  branch.html  menubar.html  panel.html  sidebar.html  table.html  tabs.html
docs/components/: alert-dialog.html  area-overlay-buttons.html  array.html  asset-view.html  avatar.html  badge.html  breadcrumb.html  button.html  card.html  checkbox.html  clips-timeline.html  code-editor.html  code-snippet.html  color.html  combo-buttons.html  counter.html  curve.html  custom.html  data-tree.html  date-picker.html  dialog.html  dropdown.html  empty.html  file.html  form.html  graph-editor.html  item-array.html  keyframe_timeline.html  layers.html  list.html  map-2d.html  menubar.html  number.html  other-components.html  otp-input.html  pad.html  pagination.html  popover.html  progress.html  radio-group.html  (+22 more)
docs/extensions/: asset-view.html  clips-timeline.html  code-editor.html  doc-maker.html  graph-editor.html  keyframes-timeline.html  timeline.html  video-editor.html
docs/manual/: creating-areas.html  event-handling.html  first-components.html  getting-started.html  icons.html  installation.html  instancing-panels.html  panel-branching.html  theme-customization.html  theming.html
docs/reference/: area-overlay-buttons.html  area.html  base-component.html  branch.html  menubar.html  panel.html  sidebar.html  table.html  tabs.html  widget.html
docs/widgets/: button.html  checkbox.html  color.html  combo-buttons.html  curve.html  custom.html  data-tree.html  date-picker.html  dropdown.html  file.html  form.html  input-otp.html  item-array.html  layers.html  list.html  map-2d.html  number.html  other-widgets.html  otp-input.html  pad.html  progress.html  radio-group.html  range.html  select.html  size.html  tab-sections.html  table.html  tags.html  text-area.html  text.html  title.html  toggle.html  vector.html
examples/: all-components.html  all-widgets.html  all_widgets.html  area-tabs.html  area_tabs.html  asset-view.html  asset_browser.html  asset_view.html  code-editor.html  code_editor.html  dialogs.html  editor.html  immediate-ui.html  immediate_ui.html  index.html  node-graph.html  node_graph.html  overlay_area.html  pocket_dialog.html  side-bar.html  side_bar.html  timeline.html  video-editor.html  video-editor2.html  video_editor.html  video_editor2.html
icons/: index.html
registry/: colors.json
src/: Core.ts  area.js  asset_view.js  base_component.js  branch.js  core.js  icons.js  index.all.js  index.all.ts  index.css.ts  index.js  index.ts  menubar.js  panel.js  sidebar.js  tour.js  types.d.ts  utils.js  widget.js
src/components/: AlertDialog.ts  Area.ts  ArrayInput.ts  Avatar.ts  BaseComponent.ts  Branch.ts  Button.ts  Calendar.js  Calendar.ts  CalendarRange.js  CalendarRange.ts  CanvasCurve.js  CanvasCurve.ts  CanvasDial.js  CanvasDial.ts  CanvasMap2D.js  CanvasMap2D.ts  Card.ts  Checkbox.ts  Color.js  Color.ts  ColorInput.ts  Counter.ts  (+69 more)
(+22 files in other folders)
